@@ -4,7 +4,8 @@ IRC Client Daemon CHANGES
 CURRENT
 ---------------------------------------
   * The function thread.new can now take a file path as argument,
-  * New address system for irccd.socket.
+  * New address system for irccd.socket,
+  * Add new irccd.util.convert.
 
 1.1.2 Wednesday 26, 2014
 ---------------------------------------
